# frberatung

./: .gitignore  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  dockerfile  how_to.md  package-lock.json  package.json  pyproject.toml  readme.md  tailwind.config.js
app/: __init__.py  auth_utils.py  commands.py  config.py  extensions.py  make_celery.py
app/blueprints/api/: auth.py  models.py  routes.py  schemes.py
app/blueprints/auth/: models.py
app/blueprints/main/: routes.py
app/blueprints/onboarding/: __init__.py  model.py  routes.py  schemas.py
app/blueprints/onboarding/source/: scoring.py  services.py  spec.py
app/static/css/: highcharts.css  main.css  onboarding.css  sidebar.css
app/static/img/: hero-marc-friedrich.avif
app/static/js/: onboarding.js
app/static/js/navbar/: navbar.js  sidebar.js
app/static/src/: input.css
app/templates/: base.html  blank_base.html  home.html
app/templates/dashboard/: blueprint.html  home.html  partners.html  portfolio.html  reminders.html  settings.html
app/templates/dashboard/partials/: sidebar.html
app/templates/error/: 403.html  404.html  500.html  not_whitelisted.html
app/templates/onboarding/: form.html
app/templates/partials/: footer.html  home_navbar.html  navbar.html
migrations/versions/: bdadd04a9f76_initial_migration.py
service_templates/: celery_server.txt  celerybeat.txt
