[project]
name = "zielzone_server"
version = "0.1.0"
description = "server for the web application of the zielzone ghost instance"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "alembic==1.14.1",
    "amqp==5.3.1",
    "asgiref>=3.8.1",
    "async-timeout==5.0.1",
    "beautifulsoup4==4.13.3",
    "billiard==4.2.1",
    "blinker==1.9.0",
    "cachelib==0.9.0",
    "celery==5.4.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "Deprecated==1.2.18",
    "dnspython==2.7.0",
    "email_validator==2.2.0",
    "Flask==3.1.0",
    "Flask-Caching==2.3.0",
    "Flask-Limiter==3.10.1",
    "Flask-Login==0.6.3",
    "Flask-Migrate==4.1.0",
    "Flask-Session==0.8.0",
    "Flask-SQLAlchemy==3.1.1",
    "flask-talisman==1.1.0",
    "Flask-WTF==1.2.2",
    "flower==2.0.1",
    "fonttools==4.56.0",
    "frozendict==2.4.6",
    "greenlet==3.1.1",
    "gunicorn>=23.0.0",
    "humanize==4.12.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.5",
    "kiwisolver==1.4.8",
    "kombu==5.4.2",
    "limits==4.0.1",
    "Mako==1.3.9",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib==3.10.1",
    "mdurl==0.1.2",
    "msgspec==0.19.0",
    "multitasking==0.0.11",
    "numpy==2.2.3",
    "ordered-set==4.1.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "peewee==3.17.9",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "prometheus_client==0.21.1",
    "prompt_toolkit==3.0.50",
    "psycopg2-binary==2.9.10",
    "Pygments==2.19.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.1",
    "redis==5.2.1",
    "requests==2.32.3",
    "rich==13.9.4",
    "six==1.17.0",
    "soupsieve==2.6",
    "SQLAlchemy==2.0.38",
    "tornado==6.4.2",
    "typing_extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "websocket-client==1.8.0",
    "Werkzeug==3.1.3",
    "wrapt==1.17.2",
    "WTForms==3.2.1",
    "yahooquery>=2.4.1",
    "yfinance==0.2.54",
]
